# fastar-loader

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  fastar_loader.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  docs.yml
_sources/: index.rst.txt  modules.rst.txt
docs/: conf.py  fastar_loader.rst  index.rst
python/fastar_loader/: __init__.py  util.py
src/: cache.rs  index.rs  index_map.rs  lib.rs  shmem.rs  storage.rs  util.rs
src/index/: bgzf_index.rs  fai.rs  fasta_index.rs  fasta_map.rs  gzi.rs  track_index.rs  track_map.rs
src/storage/: archive.rs  memory.rs  mmap.rs  shmem.rs
test-data/assemblies/: GCA_000146045.2.fna.gz.gzi  GCF_000182965.3.fna.gz.fai  GCF_003013715.1.fna.gz.fai  GCF_003013715.1.fna.gz.gzi
test-data/assemblies/foo/bar/: GCF_000182965.3.fna.gz.gzi
test-data/tracks/: GCA_000146045.2.track.gz.gzi  GCA_000146045.2.track.gz.idx  GCF_000182965.3.track.gz.idx  GCF_003013715.1.track.gz.gzi  GCF_003013715.1.track.gz.idx
test-data/tracks/foo/: GCA_000146045.2.track.gz.idx
test-data/tracks/foo/bar/: GCF_000182965.3.track.gz.gzi  GCF_000182965.3.track.gz.idx
test_data/: GCA_000146045.2.fna.gz.gzi  GCF_000182965.3.fna.gz.gzi  GCF_003013715.1.fna.gz.gzi
tests/: conftest.py  test_fasta_map.py  test_index_map.py  test_read_sequence.py  test_track_map.py
