[package]
name = "fastar-loader"
version = "0.1.0"
edition = "2021"

[lib]
name = "fastar_loader"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
crc32fast = "1.4.2"
glob = "0.3.2"
numpy = "0.24.0"
page_size = "0.6.0"
rkyv = { version = "0.8.10", features = ["pointer_width_64"] }
shared_memory = "0.12.4"

[dev-dependencies]
tempfile = "3.19.1"

[dependencies.noodles]
version = "0.97.0"
features = ["bgzf", "core", "fasta"]

[dependencies.pyo3]
version = "0.24.1"
features = ["extension-module", "generate-import-lib"]
