[project]
name = "fastar-loader"
version = "0.1.0"
description = "A faster loader for multiprocess random access to FASTA files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
]

[dependency-groups]
dev = [
    "maturin>=1.8.3,<2.0",
    "numpy>=2,<3",
    "polars>=1.27.1",
    "pre-commit>=4.2.0",
    "pyfaidx>=0.8.1.3",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
python-source = "python"

[tool.snakefmt]
line-length = 100

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
include = ["python/fastar_loader", "tests"]
